cmake_minimum_required (VERSION 3.8)

project(mtt)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(applications/Examples/Empty)
add_subdirectory(applications/Examples/Fire)
add_subdirectory(applications/Examples/Mesh)
add_subdirectory(applications/Examples/Manipulator)
add_subdirectory(applications/Examples/Model)
add_subdirectory(applications/Examples/SlaveModel)
add_subdirectory(applications/ObjectEditor)
add_subdirectory(applications/ParticlesEditor)
add_subdirectory(applications/IDGenerator)
add_subdirectory(shaders)
add_subdirectory(src/application)
add_subdirectory(src/clPipeline)
add_subdirectory(src/editorLib)
add_subdirectory(src/fbx)
add_subdirectory(src/particles)
add_subdirectory(src/render)
add_subdirectory(src/utilities)
