cmake_minimum_required (VERSION 3.8)

project(mtt)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(applications/Examples/01_Empty)
add_subdirectory(applications/Examples/02_Mesh)
add_subdirectory(applications/Examples/03_Model)
add_subdirectory(applications/Examples/04_SlaveModel)
add_subdirectory(applications/Examples/05_Fire)
add_subdirectory(applications/Examples/06_Manipulator)
add_subdirectory(applications/Examples/07_Shadows)
add_subdirectory(applications/Examples/08_Objects)
add_subdirectory(applications/Examples/09_ObjectLink)
add_subdirectory(applications/Examples/10_Commands)
add_subdirectory(applications/ObjectEditor)
add_subdirectory(applications/ParticlesEditor)
add_subdirectory(applications/IDGenerator)
add_subdirectory(shaders)
add_subdirectory(src/application)
add_subdirectory(src/clPipeline)
add_subdirectory(src/editorLib)
add_subdirectory(src/fbx)
add_subdirectory(src/particles)
add_subdirectory(src/render)
add_subdirectory(src/utilities)
